force-app/main/default/objects/fferpcore__PSA_Analytics_Setup__c/fferpcore__PSA_Analytics_Setup__c.object-meta.xml
<CustomObject>
    <description>Used to create a PS Cloud Core Analytics app. This object contains details of the data required for the app and any object sharing or permission controls applied to it.</description>
    <label>PS Cloud Analytics Setup</label>
    <nameField>
        <displayFormat>AS-{000}</displayFormat>
        <label>PS Cloud Analytics Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PS Cloud Analytics Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>