force-app/main/default/objects/fferpcore__PSA_Analytics_Setup__c/fields/fferpcore__Active__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the PS Cloud Analytics Setup record used to create the PS Cloud Core Analytics app. You can only have one active PS Cloud Analytics Setup record.</description>
    <inlineHelpText>Indicates the PS Cloud Analytics Setup record used to create the PS Cloud Core Analytics app. You can only have one active PS Cloud Analytics Setup record.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>