force-app/main/default/objects/fferpcore__PSA_Analytics_Setup__c/fields/fferpcore__Additional_Milestone_Field_API_Names__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Additional_Milestone_Field_API_Names__c</fullName>
    <description>Stores the API names of additional fields from the Milestone object in the Billings, Project Reporting, and Revenue Forecast datasets in the PS Cloud Core Analytics app.</description>
    <inlineHelpText>Stores the API names of additional fields from the Project object in the Billings, Project Reporting, and Revenue Forecast datasets in the PS Cloud Core Analytics app.</inlineHelpText>
    <label>Additional Milestone Field API Names</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>