force-app/main/default/objects/fferpcore__PSA_Analytics_Setup__c/fields/fferpcore__Contact_Additional_Fields__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Contact_Additional_Fields__c</fullName>
    <description>A comma-delimited list of additional fields on the Contact object that had been chosen to be added to PSA Analytics.</description>
    <inlineHelpText>A comma-delimited list of additional fields on the Contact object that had been chosen to be added to PSA Analytics.</inlineHelpText>
    <label>Contact Additional Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>