force-app/main/default/objects/fferpcore__PSA_Analytics_Setup__c/fields/fferpcore__Fiscal_Year_Start_Month__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Fiscal_Year_Start_Month__c</fullName>
    <description>Indicates the month set as the start of your fiscal year. The default option is January.</description>
    <inlineHelpText>Indicates the month set as the start of your fiscal year. The default option is January.</inlineHelpText>
    <label>Fiscal Year Start Month</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>January</fullName>
                <default>true</default>
                <label>January</label>
            </value>
            <value>
                <fullName>February</fullName>
            </value>
            <value>
                <fullName>March</fullName>
            </value>
            <value>
                <fullName>April</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>June</fullName>
            </value>
            <value>
                <fullName>July</fullName>
            </value>
            <value>
                <fullName>August</fullName>
            </value>
            <value>
                <fullName>September</fullName>
            </value>
            <value>
                <fullName>October</fullName>
            </value>
            <value>
                <fullName>November</fullName>
            </value>
            <value>
                <fullName>December</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>