force-app/main/default/objects/fferpcore__PSA_Analytics_Setup__c/fields/fferpcore__Utilization_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__Utilization_Calculation_Type__c</fullName>
    <description>If Utilization Setup is selected, creates the Utilization Results dataset. If Utilization Calculation is selected, creates data in the Capacity and Utilization dataset. If Both Calculation Types (for migration purposes) is selected, creates the Utilization Results, Utilization Summary/Detail and Utilization datasets. For information about the dashboards and apps that can be created from these datasets, see the Business Analytics Help.</description>
    <inlineHelpText>If Utilization Setup is selected, creates the Utilization Results dataset. If Utilization Calculation is selected, creates data in the Capacity and Utilization dataset. If Both Calculation Types (for migration purposes) is selected, creates the Utilization Results, Utilization Summary/Detail and Utilization datasets. For information about the dashboards and apps that can be created from these datasets, see the Business Analytics Help.</inlineHelpText>
    <label>Utilization Calculation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utilization Setup</fullName>
            </value>
            <value>
                <fullName>Utilization Calculation</fullName>
            </value>
            <value>
                <fullName>Both Calculation Types (for migration purposes)</fullName>
                <default>true</default>
                <label>Both Calculation Types (for migration purposes)</label>
            </value>
            <value>
                <fullName>Utilization Result</fullName>
                <isActive>false</isActive>
                <label>Utilization Result</label>
            </value>
            <value>
                <fullName>Utilization Result and Summary/Detail</fullName>
                <isActive>false</isActive>
                <label>Utilization Result and Summary/Detail</label>
            </value>
            <value>
                <fullName>Utilization Summary/Detail</fullName>
                <isActive>false</isActive>
                <label>Utilization Summary/Detail</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>