force-app/main/default/objects/fferpcore__PSA_Analytics_Setup__c/listViews/fferpcore__All.listView-meta.xml
<ListView>
    <fullName>fferpcore__All</fullName>
    <columns>NAME</columns>
    <columns>fferpcore__Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>